force-app/main/default/objects/AI_Recommendation__c/AI_Recommendation__c.object-meta.xml
<CustomObject>
    <label>AI Recommendation</label>
    <pluralLabel>AI Recommendations</pluralLabel>
    <nameField>
        <displayFormat>AIR-{00000000}</displayFormat>
        <label>Recommendation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>