force-app/main/default/objects/AI_Recommendation__c/fields/Executed_By__c.field-meta.xml
<CustomField>
    <fullName>Executed_By__c</fullName>
    <label>Executed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AI Recommendations (Executed By)</relationshipLabel>
    <relationshipName>Executed_AI_Recommendations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>