force-app/main/default/objects/AI_Recommendation__c/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <label>Interaction</label>
    <type>Lookup</type>
    <referenceTo>AI_Interaction__c</referenceTo>
    <relationshipName>Recommendations</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>