force-app/main/default/objects/AI_Recommendation__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <label>Partner Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AI Recommendations</relationshipLabel>
    <relationshipName>AI_Recommendations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>