force-app/main/default/objects/AI_Recommendation__c/fields/Recommendation_Text__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Text__c</fullName>
    <label>Recommendation Text</label>
    <length>4096</length>
    <type>LongTextArea</type>
    <required>true</required>
</CustomField>