force-app/main/default/objects/AI_Recommendation__c/fields/Recommended_Action_Key__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action_Key__c</fullName>
    <description
  >Matches an AI_Action_Policy__mdt Action_Key__c row for the same Use_Case_Key__c - AgentActionGatewayService.executeAction() re-resolves this policy at execute time, never trusting the propose-time check alone.</description>
    <label>Recommended Action Key</label>
    <length>80</length>
    <type>Text</type>
    <required>true</required>
</CustomField>